upgrading test classes to Junit 5 and all build files to use Java 17 and later version of Gradle