@@ -27,6 +27,9 @@ ext {
 
   slf4jVersion = '2.0.3'
   mockitoVersion = '4.9.0'
+  
+  interlokCommonsOfflineJavadocDir = project.rootDir.getCanonicalPath() + "/interlok-common/build/docs/javadoc"
+  delombokTargetDir = new File("${project.projectDir}/src/main/generated")
 }
 
 ext.hostname = { ->
@@ -109,8 +112,8 @@ subprojects {
   apply plugin: 'com.github.spotbugs'
   apply plugin: 'org.owasp.dependencycheck'
 
-  sourceCompatibility = JavaVersion.VERSION_11
-  targetCompatibility = JavaVersion.VERSION_11
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
   group   = 'com.adaptris'
   version = releaseVersion
   def versionDir = "$buildDir/version"
@@ -175,7 +178,8 @@ subprojects {
     offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar") { changing= true}
     offlineJavadocPackages ("com.adaptris:interlok-common:$interlokCoreVersion:javadoc@jar") { changing= true}
 
-    testImplementation ('junit:junit:4.13.2')
+    testImplementation ('org.junit.jupiter:junit-jupiter-api:5.9.2')
+    testImplementation ("org.junit.jupiter:junit-jupiter-engine:5.9.2")
     testImplementation ("org.slf4j:slf4j-simple:$slf4jVersion")
     testImplementation ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true }
     testImplementation ("org.mockito:mockito-core:$mockitoVersion")
@@ -307,6 +311,11 @@ subprojects {
         }
       }
     }
+  }
+  
+  test {
+  jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
+  useJUnitPlatform()
   }
 
   jacocoTestReport {
